# haskell-playground

./: .gitignore  README.md  README.org
alien-alphabet/: ChangeLog.md  README.org  TAGS  alien-alphabet.cabal  package.yaml
alien-alphabet/app/: Main.hs
alien-alphabet/src/: Digraph.hs  Lib.hs
amqp-tester/: .gitignore  ChangeLog.md  LICENSE  Setup.hs  amqp-tester.cabal  package.yaml  readme.org  stack.yaml
amqp-tester/app/: Main.hs
flocking/: ChangeLog.md  README.org  flocking.cabal  package.yaml
fsm/: .gitignore  README.org  package.yaml
fsm/src/: Main.hs  (+2 more)
github/: .gitignore  ChangeLog.md  TAGS  github.cabal  package.yaml  stack.yaml
graph-hs/: ChangeLog.md  README.org  graph-hs.cabal  package.yaml
instant-insanity/: .gitignore  ChangeLog.md  README.org  package.yaml
interpreter/: LICENSE  README.org  interpreter.cabal  package.yaml  stack.yaml
jk/: ChangeLog.md  allflows.csv  jk.cabal  package.yaml  stack.yaml
lambda-tui/: LICENSE  README.md  lambda-tui.cabal
lambda-tui/src/: App.hs  Main.hs
microkanren/: README.org  microkanren.cabal  package.yaml
nix-haskell/: .gitignore  LICENSE  Main.hs  README.org  default.nix  nix-haskell.cabal
oauth2/: ChangeLog.md  README.org  TAGS  keycloak.json  oauth2.cabal  package.yaml  stack.yaml
raycaster/: .gitignore  ChangeLog.md  LICENSE  Makefile  README.org  package.yaml  raycaster.cabal
rpc-client/: .gitignore  ChangeLog.md  LICENSE  package.yaml  rpc-client.cabal  stack.yaml
service-search-suggestions/: .gitignore  LICENSE  README.md  package.yaml  service-search-suggestions.cabal  stack.yaml
(+88 files in other folders)
