name:                lambda-tui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sstoltze/lambda-tui#readme
license:             BSD3
license-file:        LICENSE
author:              S. Stoltze
maintainer:          sstoltze@gmail.com
copyright:           2020 S. Stoltze
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lambda-tui
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  other-modules:       App
  build-depends:       base >= 4.7 && < 5
                     , text
                     , brick
                     , vty
